<resources>
    <string name="app_name">proyecto software1</string>
    <string name="ingresar">INGRESAR</string>
    <string name="modificar">MODIFICAR</string>>
    <string name="cliente">CLIENTES</string>
    <string name="titulo_emanuel">DISTRIBUCIONES EMANUEL</string>
    <string name="Granos">GRANOS</string>
    <string name="lacteos">LACTEOS</string>
    <string name="cacharreria">CACHARRERIA</string>
    <string name="medicamentos">MEDICAMENTOS</string>
    <string name="dulcerias">DULCERIAS</string>
    <string name="carnes_frias">CARNES FRIAS</string>
    <string name="imagen">img</string>
    <string name="ingresar_pedidos">INGRESAR PEDIDOS</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">contraseña</string>
    <string name="iniciar">iniciar</string>
    <string name="inicio_de_sesion">INICIO DE SESION</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="celeular">Celeular</string>
    <string name="direccion">Direccion</string>
    <string name="cedula">Cedula</string>
    <string name="codigo">Codigo</string>
    <string name="contrase_na">Contraseña</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
