<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jj.proyectosoftware1.Main2Activity"
    android:background="#0F0E0E">

    <TextView
        android:id="@+id/titulo_principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/titulo_emanuel"
        android:textColor="#0826E7"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <android.support.constraint.ConstraintLayout
        android:background="#494949"
        android:layout_width="0dp"
        android:layout_height="325dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:id="@+id/constraintLayout"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/titulo_principal"
        app:layout_constraintHorizontal_bias="0.0">



    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btngranos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Granos"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btnlacteos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lacteos"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/btngranos"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btncacharreria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cacharreria"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="2dp"
        app:layout_constraintTop_toBottomOf="@+id/btnlacteos"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btnmedicamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicamentos"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="1dp"
        app:layout_constraintTop_toBottomOf="@+id/btncacharreria"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btndulcerias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dulcerias"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/btnmedicamentos"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btncarnes_frias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:text="@string/carnes_frias"
        app:layout_constraintTop_toBottomOf="@+id/btndulcerias"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout" />
</android.support.constraint.ConstraintLayout>
